# co2

./: readme.md
concept/: concept.md  system.md  tuts.md
handler/i2c/: Cargo.toml  main.py
handler/i2c/src/: bme280.rs  lib.rs  lib_bme280.rs  lib_i2c.rs  lib_mqtt.rs  main.rs
handler/i2c/src/lib/: lib.rs  lib_mqtt.rs
handler/webpage/: main.py  spa.html
handler/websocket/src/: main.py
handler/websocket/tests/: test_suite.py
scripts/: copy_scripts.sh  setup.sh  sys_setup.md
webpage/: main.py
websocket/tests/: run.sh
