[package]
name = "i2c"
version = "0.1.0"
authors = ["llpghn <patrickberendes@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# = "0.1.5"
#openssl = { version = "0.10.29", features = ["vendored"] }
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
# mqtt-async-client = "0.2.0"
