[package]
name = "i2c"
version = "0.1.0"
authors = ["llpghn <patrickberendes@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# = "0.1.5"
openssl = { version = "0.10.29", features = ["vendored"] }
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
env_logger = "0.8.3"

bme280 = "0.2.1"
linux_embedded_hal = "0.3.0"

# Grundlegende I2C und so Bibliotek 
# rppal = "0.12.0" 
